# salesagent

./: .bandit  .coverage  .env  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  GOOGLE_SHEETS_INTEGRATION.md  README.md  README_SECURE_DEPLOYMENT.md  README_WEEKLY_SYSTEM.md  SYSTEM_SUMMARY.md  TEST_RESULTS.md  com.cliocircle.daily-leadgen.plist  coverage.xml  env.example  gmail_email_system.py  gmail_setup_instructions.md  mypy.ini  outbound.py  outbound_backup.py  production_config.json  pyproject.toml  requirements.txt  setup_daily_scheduler.sh  setup_google_sheets.py  start_daily_scheduler.py  start_weekly_scheduler.sh  stop_email_spam.py  synthesized_report.md  test.json  test_gmail_integration.py  test_google_sheets.py  test_scheduler.py  weekly_scheduler.py
.github/workflows/: ci.yml
config/: email_templates.yaml  secure_config.yaml
scripts/: deploy_secure.py  lint_and_test.py  run_tests.py
src/: constants.py  credentials_manager.py  exceptions.py  google_sheets_service.py  llm_service.py  models.py  parsers.py  performance_optimizer.py  scraping_service.py  search_service.py  signal_processor.py  validators.py
src/integrations/: __init__.py  newsdata_client.py
src/workflows/: __init__.py  lead_generator.py
tests/: test_credentials_manager.py  test_email_system.py  test_integration.py  test_llm_service.py  test_outbound.py  test_real_workflow.py  test_scraping_workflow.py  test_validators.py  test_weekly_scheduler.py
